fix: adjust left position of drink-panel for better alignment

--- a/media/style.css
+++ b/media/style.css
@@ -137,7 +137,7 @@ body {
 
 .drink-panel {
   position: absolute;
-  left: 30px;
+  left: 40px;
   bottom: 40px;
   width: auto;
   display: flex;
